fix(template): 修复项目仓库地址默认值引号缺失问题
- 在默认值周围添加引号以确保正确解析
- 避免因缺少引号导致的潜在模板渲染错误

--- a/.gogenie-template.yaml
+++ b/.gogenie-template.yaml
@@ -31,6 +31,6 @@ variables:
     type: "string"
   Repository:
     description: "项目 Git 仓库地址"
-    default: {{.ProjectName}}
+    default: "{{.ProjectName}}"  # 修复：添加引号
     required: true
     type: "string"
