feat(config): 更新配置结构并支持动态项目名称替换
- 将配置中的 MysqlConfig 字段重命名为 DbConfig
- 在多个文件中将硬编码的项目名称 go-template 替换为模板变量 {{.ProjectName}}
- 更新了数据库、服务和应用初始化相关代码以适配新的配置结构
- 启用 mount 模板功能并设置默认标签为 json
- 添加了日志输出目录配置及监控采集服务器启动逻辑
- 删除了旧的配置文件 config.json 并新增 config.local.json 作为本地开发配置示例

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,12 @@ coverage.html
 
 # Dependency directories
 vendor/
+logs/
 
 # Go workspace file
 go.work
+go.work.sum
+internal/pkgs
 
 # IDE
 .idea/
