feat(gogenie): 添加 gRPC 支持并优化模板配置
- 在 pre.sh 中添加 protoc 及其相关插件的安装逻辑
- 更新 dao.tmpl、dao_impl.tmpl、service.tmpl 等模板文件的代码缩进格式
- 修改 config.yaml 支持 gRPC 服务生成及关闭缓存
- 新增 grpc.go、proto 相关文件用于支持 gRPC 服务定义与实现
- 调整 internal/apps 中 server 与 grpc 的初始化逻辑以支持同时运行
- 更新配置加载方式为从本地文件读取，并新增 gRPC 配置项
- 优化 impl.tmpl 模板支持 proto 导入及结构体字段注入
- 移除部分无用的 mount 标签并调整 autowire 配置集
- 修复 .gogenie-template.yaml 中 repository 默认值格式问题

--- a/.gogenie/config.yaml
+++ b/.gogenie/config.yaml
@@ -1,6 +1,6 @@
 global:
     project:
-        name: {{.ProjectName}}
+        name: go-template
         module: {{.ProjectName}}
         version: 1.0.0
         author: ""
@@ -25,13 +25,14 @@ commands:
         package: internal
         init_types:
             - '*'
-        enable_cache: true
+        enable_cache: false
         parallel: 0
         exclude_dirs:
             - vendor
             - testdata
             - .git
             - node_modules
+            - internal/pkgs/Verktyg
         include_only: []
         watch: false
         watch_ignore:
@@ -104,11 +105,25 @@ commands:
               structName: Service
               pkgPrefix: svc
               template: impl
+              is_grpc_service: false
+              grpc_suffix: ""
             - service: dao
               output_path: ./internal/dao_impls
               structName: DaoImpl
               pkgPrefix: dao
               template: impl
+              is_grpc_service: false
+              grpc_suffix: ""
+            - service: grpc
+              output_path: ./internal/grpc_impls
+              structName: GrpcImpl
+              pkgPrefix: grpc
+              template: impl
+              is_grpc_service: true
+              grpc_suffix: Server
+        proto_scope: ./
+        proto_paths:
+            - proto
     mount:
         enable: true
         scope: ./
