--- a/config/config.template.json
+++ b/config/config.template.json
@@ -1,21 +1,14 @@
 {
-	"db_config": {
-		"type": "",
-		"ssl_mode": "",
-		"host": "",
-		"port": 0,
-		"db": "",
-		"user": "",
-		"password": "",
-		"location": "",
-		"interpolate_params": false,
-		"extra": "",
-		"max_idle_conns": 0,
-		"max_open_conn": 0,
-		"max_life_time_ms": 0,
-		"max_idle_time_ms": 0,
-		"disable_interceptor": false,
-		"slowlog_threshold_ms": 0
+	"grpc_server_config": {},
+	"server_config": {
+		"addr": "",
+		"read_timeout_seconds": 0,
+		"read_header_timeout_seconds": 0,
+		"write_timeout_seconds": 0,
+		"idle_timeout_seconds": 0,
+		"close_wait_seconds": 0,
+		"graceful_restart": false,
+		"enable_async_logger": false
 	},
 	"metrics_gateway_config": {
 		"job": "",
@@ -37,14 +30,22 @@
 		"BaggageRestrictions": null,
 		"Throttler": null
 	},
-	"server_config": {
-		"addr": "",
-		"read_timeout_seconds": 0,
-		"read_header_timeout_seconds": 0,
-		"write_timeout_seconds": 0,
-		"idle_timeout_seconds": 0,
-		"close_wait_seconds": 0,
-		"graceful_restart": false,
-		"enable_async_logger": false
+	"db_config": {
+		"type": "",
+		"ssl_mode": "",
+		"host": "",
+		"port": 0,
+		"db": "",
+		"user": "",
+		"password": "",
+		"location": "",
+		"interpolate_params": false,
+		"extra": "",
+		"max_idle_conns": 0,
+		"max_open_conn": 0,
+		"max_life_time_ms": 0,
+		"max_idle_time_ms": 0,
+		"disable_interceptor": false,
+		"slowlog_threshold_ms": 0
 	}
 }
